--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "@react-navigation/drawer": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.4.0",
+    "firebase": "^11.0.2",
     "react": "18.2.0",
-    "react-native": "0.74.6",
+    "react-native": "^0.74.6",
     "react-native-gesture-handler": "^2.21.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
