--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "d3-shape": "^3.2.0",
     "firebase": "^11.0.2",
     "react": "18.2.0",
-    "react-native": "^0.74.6",
+    "react-native": "0.74.6",
     "react-native-gesture-handler": "^2.21.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-resizer": "^1.4.5",
@@ -37,6 +37,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^16.0.0",
     "@react-native/babel-preset": "0.74.88",
     "@react-native/eslint-config": "0.74.88",
     "@react-native/metro-config": "0.74.88",
